# Study

Certificate/: GitHub Foundations.md
fullstack/: README.md  index.html  slice.js
python_uv/: README.md  run.py
react_fastpai/: README.md  package-lock.json
seoul-ict/: README.md
seoul-ict/project/guardFall/: README.md  dbprocess.py  devSetting.md  getposedata.py  goGuardFall.bat  home.py  main.py  msgtelegram.py  predictfall.py  pyproject.toml  requirements.txt  streamlit_app_browser.py
seoul-ict/project/guardFall/.streamlit/: secrets.toml
seoul-ict/project/guardFall/_guardFall_bak20250425/: dbprocess.py  main.py  pyproject.toml  streamlit_app.py  util.py
seoul-ict/project/guardFall/_guardFall_bak20250425/bak/: streamlit_app_browser.py
seoul-ict/project/guardFall/_guardFall_bak20250425/model/: 01_createData.py  02_learn.py  scaler.pkl
seoul-ict/project/guardFall/_guardFall_bak20250425/test/: camera.py
seoul-ict/project/guardFall/_guardFall_bak20250425/test/outputs/: 서있는영상.csv
seoul-ict/project/guardFall/data/: guardfall.db
seoul-ict/project/guardFall/model/: fall_model.h5
seoul-ict/project/guardFall/pages/: analyzermov.py  createmodel.py  motoring.py
seoul-ict/project/guardFall/reference/: getposedata.py
seoul-ict/project/guardFall/script/: util.py
seoul-ict/project/guardFall/test/: h5.py  streamlit_app_browser.py
seoul-ict/project/guardFall/test/outputs/: 김려욱넘어지는영상.csv  등산넘어지는영상 .csv
seoul-ict/project/guardFall/user/csv/: merged_user_data.csv  김려욱넘어지는영상_landmarks.csv  넘어지는 영상_landmarks.csv
streamlit_fastpai/: README.md
(+38 files in other folders)
